mongo security issue was fixed